# options-flow

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  generate_tasks.py  pyproject.toml  tasks.txt
desktop/: option_flow_desktop.spec
docs/: architecture.md  deployment.md
scripts/: init_db.py
src/option_flow/: __init__.py  __main__.py
src/option_flow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/option_flow/api/: main.py
src/option_flow/config/: settings.py
src/option_flow/desktop/: app.py  shortcut.py
src/option_flow/ingest/: live.py  nbbo_cache.py  worker.py
src/option_flow/launcher/: __init__.py  cli.py  runner.py
src/option_flow/observability/: logging.py
src/option_flow/scripts/: run_demo.py  run_dev.py
src/option_flow/services/: rollups.py  side_classifier.py  sweep_cluster.py
src/option_flow/storage/: duckdb_client.py  repository.py
src/option_flow/ui/: app.py  client.py
src/option_flow/vendors/: __init__.py
src/option_flow/vendors/polygon/: __init__.py  client.py
src/option_flow/vendors/thetadata/: __init__.py  client.py
storage/: schema.sql
tests/: conftest.py  test_schema.py
tests/api/: test_endpoints.py
tests/classifiers/: test_side_label.py
tests/config/: test_settings.py
tests/desktop/: test_shortcut.py
tests/ingest/: test_live_processor.py  test_live_service.py
tests/launcher/: test_cli.py  test_runner.py
tests/nbbo/: test_cache.py
tests/services/: test_rollups.py  test_sweeps.py
tests/vendors/: test_polygon.py
